# Phase 4a Slice 4 — C++ engine distroless OCI image (Linux-only build).
#
# Strategy in ADR-0025; per-attribute rationale inline below.
#
# Targets:
#   //packaging/engine:image         — OCI image directory (CI smoke target)
#   //packaging/engine:image_load    — wraps :image for `docker load`
#   //packaging/engine:push_staging  — pushes to ECR via release-staging-image.yml
#
# CRITICAL DESIGN DECISIONS (recorded for next contributor):
#
# 1. NO target_compatible_with gate. Camp B (ADR-0025) commits the
#    project to "image is a CI artifact, dev never builds the image".
#    CI is always ubuntu-latest (Linux exec) — the Mac case literally
#    cannot fire under the trust model. Adding a `target_compatible_with`
#    gate would be defensive coding against a scenario the doctrine
#    forbids — and would break Mac-side `bazel query` / IDE completion
#    for no real safety win.
#
#    What happens if a Mac dev violates Camp B and runs
#    `bazel build //packaging/engine:image` anyway? The engine cc_binary
#    builds Mach-O arm64; pkg_tar packs it; image builds successfully;
#    `docker run aegis-core-engine:dev-local` exits with "exec format error".
#    That failure is honest and loud — Camp B says don't do this; if
#    you did it, you see why. Hermetic clang doesn't ship a Linux
#    sysroot for cross-compile, so the right answer is "build on the
#    correct host", not "block analysis on the wrong host".
#
# 2. base = "@distroless_cc" (RESOLVED 2026-06-16, WS2-2).
#    The C++ engine's link line is grpc++ + Abseil + BoringSSL +
#    protobuf + whisper.cpp/ggml/llama.cpp via rules_foreign_cc CMake
#    + libopus. The original guess was that cc_binary linkstatic would
#    yield a fully static binary runnable on `distroless_static`. It does
#    not: rules_foreign_cc CMake recipes don't honour -static, so the
#    binary is DYNAMICALLY linked. `distroless_static` ships no ELF loader,
#    so the image built fine but failed to exec — `exec /usr/local/bin/
#    engine: no such file or directory` (missing PT_INTERP) — the first
#    time it was actually run (WS2-2 live verify on local Talos; WS2-1 only
#    proved the build, never ran it).
#
#    The fix is `@distroless_cc`, NOT the `@distroless_base` this comment
#    used to suggest: a dynamically-linked C++ binary needs libstdc++ +
#    libgcc_s, which `base-*` (glibc only) lacks. cc-* is Google's designated
#    base for dynamically-linked C/C++ (loader + glibc + libstdc++ + libgcc_s).
#
#    The cc variant must also be NEW ENOUGH: local_config_cc is non-hermetic,
#    so the binary inherits the CI runner's glibc (ubuntu-24.04-arm = 2.39).
#    glibc is forward-compatible only, so cc-debian12 (glibc 2.36) was too old
#    (`GLIBC_2.38 not found`); the base is cc-debian13 (glibc 2.41). Keep the
#    runtime base glibc >= the build-runner glibc. Pulled in MODULE.bazel.
#    This BUILD's comment block is the ground-truth fork point — kept in sync
#    with ADR-0025 §"Slice 4 distroless variant decision".
#
# 3. Models NOT shipped in image. Engine reads model path via
#    `AEGIS_MODEL_PATH` env var (`engine_cpp/cmd/engine/main.cc:68-73`)
#    or default `models/ggml-tiny.en.bin` relative to CWD. Production
#    image expects `/models` to be backed by some persistent storage
#    that ldz provisions (EBS PV, S3+CSI driver, EFS — ldz's call
#    based on AWS-side trade-offs). aegis-core's contract: image is
#    storage-agnostic; engine works as long as the directory is
#    mounted at runtime with the manifest-required gguf files. Open
#    cross-repo: ldz issue #82 (filed in this slice to spec the
#    model-storage requirement; ldz picks the AWS-side realization
#    among EBS PV / S3+CSI / EFS based on their operational trade-
#    offs). Image stays small (~50-100MB), model upgrades don't
#    rebuild image, storage cost decoupled from artifact rotation.
#
#    HONEST GAP: today's engine main.cc:68-73 ASSUMES the model file
#    exists at the configured path and crashes if missing — there
#    is no manifest-driven pre-flight that walks `models/manifest.json`,
#    verifies each `"required": true` model is present at the expected
#    path with the expected SHA256, and fails loudly with an
#    operator-readable error before starting the gRPC server. That
#    pre-flight is real Phase 4c scope (tracked in ROADMAP Phase 4c
#    "engine startup manifest validation"), not Slice 4 packaging
#    scope.
#
#    The pre-flight is also load-bearing for **multi-version pod
#    coexistence during rolling deployments** — see ADR-0026
#    ("Model lifecycle on shared persistent storage"). Old + new
#    engine pods mount the same `/models` dir but each needs a
#    different model file (filename-as-version). Engine MUST walk
#    the manifest it was built against, pick its versioned filenames,
#    and tolerate "extra" files belonging to other concurrently
#    deployed versions. ldz storage is responsible for holding the
#    union of all active versions and pruning by reference count.
#
#    For Slice 4 we package today's engine as-is — production
#    deployment without the pre-flight is acceptable for staging
#    smoke (loud crash with a clear "couldn't open file X" message),
#    not acceptable for prod (which the prod-cut PR / Phase 4c will
#    block on the pre-flight landing per ADR-0026's engine
#    responsibility).

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Stage the engine binary at /usr/local/bin/engine via the
# pkg_files → pkg_tar pattern (Slice 1 lesson — Incident 12 in
# docs/incidents.md): pkg_files's `renames` is the documented robust
# rename mechanism; pkg_tar's `remap_paths` is fragile.
pkg_files(
    name = "engine_files",
    srcs = ["//engine_cpp/cmd/engine:engine"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "/usr/local/bin",
    renames = {
        "//engine_cpp/cmd/engine:engine": "engine",
    },
)

# Starter corpus shipped at FHS `/usr/local/share/corpora/` so the
# Phase 4c Cloud RAG seed Job (`apps/staging/aegis-core-engine/seed-job.yaml`)
# can bring up a non-empty Qdrant collection on first cold-apply
# without an extra delivery mechanism (S3 mount / ConfigMap / git
# init-container). Image size impact is sub-10KB. Forks that need a
# different corpus override the Job's `--corpus` flag to point at
# whatever volume mount they wire in.
pkg_files(
    name = "corpus_files",
    srcs = ["//docs/rag:taiwan.md"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "/usr/local/share/corpora",
)

pkg_tar(
    name = "engine_layer",
    srcs = [
        ":corpus_files",
        ":engine_files",
    ],
)

oci_image(
    name = "image",
    # distroless_cc, NOT distroless_static — see comment §2 below and
    # MODULE.bazel. The engine binary is dynamically linked (CMake deps don't
    # honour -static); static has no ELF loader, so the image failed to exec
    # the first time it ran (WS2-2 live verify). cc supplies loader + glibc +
    # libstdc++/libgcc_s.
    base = "@distroless_cc",
    entrypoint = ["/usr/local/bin/engine"],
    # Engine listens on :50051 for gRPC (engine_cpp/cmd/engine/main.cc:55).
    # Informational metadata; NetworkPolicy is the actual enforcement
    # layer in Phase 4c.
    exposed_ports = ["50051/tcp"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/BinHsu/aegis-core",
        "org.opencontainers.image.title": "aegis-core-engine",
        "org.opencontainers.image.description": "Aegis Engine — C++ inference engine (whisper.cpp + ggml + llama.cpp).",
        "org.opencontainers.image.licenses": "Apache-2.0",
    },
    tars = [":engine_layer"],
    user = "nonroot",
    visibility = ["//visibility:public"],
)

# Local smoke (CI use): `bazel run //packaging/engine:image_load`
# loads into docker daemon. Same usage shape as the gateway image.
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["aegis-core-engine:dev-local"],
)

# ECR push target — consumed by .github/workflows/release-staging-image.yml.
# Same repository as gateway image (single ECR repo, image type
# distinguished by tag prefix: `staging-<sha>` for gateway,
# `engine-staging-<sha>` for engine). When prod-cut splits ECR repos
# (ldz #79 Q1 / Phase 4c+), this rule's repository attribute updates.
#
# `target_compatible_with = linux`: deliberately HERE (not on :image).
# The build-the-image case has no shared-state side effect — harmless
# if a Mac dev runs it (they get a broken local artifact, no
# contamination). The push case uploads to a shared registry and
# would pollute it with a Mach-O binary tagged as a release artifact.
# Asymmetric blast radii get asymmetric defenses (CLAUDE.md
# "Executing actions with care": hard-to-reverse operations need
# guards even when the doctrine forbids them — Camp B trust covers
# build, not push).
#
# Server-side defense-in-depth tracked separately in
# aegis-aws-landing-zone#83 (ldz to add an ECR resource policy
# denying ecr:PutImage from any principal other than the
# github-actions-aegis-core-ecr OIDC role).
#
# `repository` is rules_oci's BUILD-time-required default — used only
# when `bazel run :push_staging` is invoked WITHOUT a runtime
# `--repository` flag override. CI ALWAYS passes --repository at
# runtime sourced from GitHub Variables (vars.AWS_ACCOUNT_ID +
# vars.AWS_REGION + vars.ECR_REPO_NAME). Forker's CI overrides via
# --repository, no BUILD edit needed (per ADR-0027 §"GH Variables
# over hardcode").
oci_push(
    name = "push_staging",
    image = ":image",
    repository = "251774439261.dkr.ecr.eu-central-1.amazonaws.com/aegis-core",
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)
