# Phase 4a Slice 1 — Go Gateway distroless OCI image (local-only).
#
# Strategy in ADR-0025; per-attribute rationale inline below.
#
# Targets:
#   //packaging/gateway:image         — OCI image directory (CI smoke target;
#                                       no docker daemon needed to build)
#   //packaging/gateway:image_load    — wraps :image for `docker load`
#                                       (`bazel run` invokes the loader)
#
# NOT in this slice (deferred):
#   - SBOM generation (Slice 2, Syft + CycloneDX)
#   - ECR push (Slice 3, GitHub Actions OIDC role)
#   - Cosign / SLSA L3 (Phase 4b)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Stage the gateway cross-binary at /usr/local/bin/gateway via the
# pkg_files → pkg_tar pattern. We use pkg_files (not pkg_tar's
# remap_paths shortcut) because:
#   - pkg_files's `renames` is the documented robust mechanism for
#     renaming the in-tar file regardless of upstream basename;
#   - pkg_tar's `remap_paths` matches as a path prefix and is
#     sensitive to whether the tar entries carry a leading slash —
#     fragile across rules_pkg versions.
# The image entrypoint is /usr/local/bin/gateway (clean Unix
# convention); the underlying cross-binary's filename
# `gateway_linux_amd64` is an artefact of the go_cross_binary rule
# name and is hidden from the runtime via this rename.
pkg_files(
    name = "gateway_files",
    srcs = ["//gateway_go/cmd/gateway:gateway_linux_amd64"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "/usr/local/bin",
    renames = {
        "//gateway_go/cmd/gateway:gateway_linux_amd64": "gateway",
    },
)

pkg_tar(
    name = "gateway_layer",
    srcs = [":gateway_files"],
)

# Compose the image:
#   - base: distroless static-debian12:nonroot pulled by digest in MODULE.bazel
#   - user: "nonroot" — ships as uid 65532; satisfies ROADMAP §Phase 4a
#     "non-root with dropped capabilities and read-only root filesystem"
#   - exposed_ports: 8080/tcp (HTTP/healthz) + 9090/tcp (gRPC) match the
#     current hardcoded listeners in gateway_go/cmd/gateway/main.go;
#     informational metadata only — kubelet / container runtime ignores it
#     and a NetworkPolicy is the actual enforcement layer in Phase 4c.
#   - labels: OCI image-spec annotations consumed by registries, scanners,
#     and `docker inspect`. Tag-level provenance (git SHA, semver) lands
#     in Slice 3 alongside ECR push.
oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/gateway"],
    exposed_ports = [
        "8080/tcp",
        "9090/tcp",
    ],
    labels = {
        "org.opencontainers.image.source": "https://github.com/BinHsu/aegis-core",
        "org.opencontainers.image.title": "aegis-gateway",
        "org.opencontainers.image.description": "Aegis Gateway — gRPC + gRPC-Web + WebRTC entry point.",
        "org.opencontainers.image.licenses": "Apache-2.0",
    },
    tars = [":gateway_layer"],
    user = "nonroot",
    visibility = ["//visibility:public"],
)

# Local smoke: `bazel run //packaging/gateway:image_load` loads the image
# into the host docker daemon under the tag below. Not invoked by CI —
# CI builds :image directly (no docker daemon on the runner needed).
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["aegis-gateway:dev-local"],
)

# ECR push target — Phase 4a Slice 3.
#
# `repository` is BUILD-time required by rules_oci v2 (the runtime
# `--repository` flag is an OVERRIDE, not a substitute — empty BUILD
# value fails analysis). The hardcoded value is fine: account ID +
# region + repo path are already public via ldz #11 + #75 + the trust
# policy ARN in the consuming workflow file; nothing secret leaks here.
# Runtime override with --repository remains available for ad-hoc
# pushes to alternate registries (preview / personal AWS, etc.).
#
# `remote_tags` is intentionally omitted: tags are git-sha-derived
# (`staging-<git_sha>`), computable only at CI runtime. Pass via
# `--tag staging-<sha>` at `bazel run` time.
#
# rules_oci's oci_push consults the standard docker config
# (~/.docker/config.json) for registry auth, which the consuming
# workflow's `aws-actions/amazon-ecr-login` step populates.
#
# CI invocation (from .github/workflows/release-staging-image.yml):
#   bazel run //packaging/gateway:push_staging -- \
#     --repository ${ECR_REGISTRY}/aegis-core \
#     --tag staging-${GITHUB_SHA}
oci_push(
    name = "push_staging",
    image = ":image",
    repository = "251774439261.dkr.ecr.eu-central-1.amazonaws.com/aegis-core",
    visibility = ["//visibility:public"],
)
