# Phase 4a Slice 1 — Go Gateway distroless OCI image (local-only).
#
# Strategy in ADR-0025; per-attribute rationale inline below.
#
# Targets:
#   //packaging/gateway:image          — amd64 OCI image directory (ECR/staging
#                                        path; CI smoke target, no docker daemon
#                                        needed to build)
#   //packaging/gateway:image_load     — wraps :image for `docker load`
#                                        (`bazel run` invokes the loader)
#   //packaging/gateway:push_staging   — amd64 push (ECR via release-staging-image.yml)
#   //packaging/gateway:image_arm64    — arm64 OCI image directory (on-prem /
#                                        Graviton path: GHCR + local Talos)
#   //packaging/gateway:image_arm64_load
#                                      — wraps :image_arm64 for `docker load`
#   //packaging/gateway:push_onprem    — arm64 push (GHCR via release-onprem-image.yml)
#
# Two arch variants, not a multi-arch image_index: the staging/ECR path is
# amd64 (ubuntu-latest builders) and the on-prem/GHCR path is arm64
# (ubuntu-24.04-arm builders feeding apple/container + Graviton). Each
# workflow builds the single variant it needs; an image_index that fuses
# both is deferred (Slice 3) — YAGNI while the two consumers are arch-pinned.
#
# NOT in this slice (deferred):
#   - SBOM generation (Slice 2, Syft + CycloneDX)
#   - Cosign / SLSA L3 (Phase 4b)
#   - multi-arch image_index fusing amd64 + arm64 (Slice 3)

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Stage the gateway cross-binary at /usr/local/bin/gateway via the
# pkg_files → pkg_tar pattern. We use pkg_files (not pkg_tar's
# remap_paths shortcut) because:
#   - pkg_files's `renames` is the documented robust mechanism for
#     renaming the in-tar file regardless of upstream basename;
#   - pkg_tar's `remap_paths` matches as a path prefix and is
#     sensitive to whether the tar entries carry a leading slash —
#     fragile across rules_pkg versions.
# The image entrypoint is /usr/local/bin/gateway (clean Unix
# convention); the underlying cross-binary's filename
# (`gateway_linux_amd64` / `gateway_linux_arm64`) is an artefact of the
# go_cross_binary rule name and is hidden from the runtime via this rename.
pkg_files(
    name = "gateway_files",
    srcs = ["//gateway_go/cmd/gateway:gateway_linux_amd64"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "/usr/local/bin",
    renames = {
        "//gateway_go/cmd/gateway:gateway_linux_amd64": "gateway",
    },
)

pkg_tar(
    name = "gateway_layer",
    srcs = [":gateway_files"],
)

# arm64 sibling of gateway_files/gateway_layer — packs the linux/arm64
# cross-binary at the same /usr/local/bin/gateway path. Kept as a parallel
# pair (not parameterised) so the amd64 layer above stays byte-for-byte
# identical for the unchanged ECR path.
pkg_files(
    name = "gateway_files_arm64",
    srcs = ["//gateway_go/cmd/gateway:gateway_linux_arm64"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "/usr/local/bin",
    renames = {
        "//gateway_go/cmd/gateway:gateway_linux_arm64": "gateway",
    },
)

pkg_tar(
    name = "gateway_layer_arm64",
    srcs = [":gateway_files_arm64"],
)

# Compose the image:
#   - base: distroless static-debian12:nonroot pulled by digest in MODULE.bazel
#   - user: "nonroot" — ships as uid 65532; satisfies ROADMAP §Phase 4a
#     "non-root with dropped capabilities and read-only root filesystem"
#   - exposed_ports: 8080/tcp (HTTP/healthz) + 9090/tcp (gRPC) match the
#     current hardcoded listeners in gateway_go/cmd/gateway/main.go;
#     informational metadata only — kubelet / container runtime ignores it
#     and a NetworkPolicy is the actual enforcement layer in Phase 4c.
#   - labels: OCI image-spec annotations consumed by registries, scanners,
#     and `docker inspect`. Tag-level provenance (git SHA, semver) lands
#     in Slice 3 alongside ECR push.
oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/gateway"],
    exposed_ports = [
        "8080/tcp",
        "9090/tcp",
    ],
    labels = {
        "org.opencontainers.image.source": "https://github.com/BinHsu/aegis-core",
        "org.opencontainers.image.title": "aegis-core-gateway",
        "org.opencontainers.image.description": "Aegis Gateway — gRPC + gRPC-Web + WebRTC entry point.",
        "org.opencontainers.image.licenses": "Apache-2.0",
    },
    tars = [":gateway_layer"],
    user = "nonroot",
    visibility = ["//visibility:public"],
)

# Local smoke: `bazel run //packaging/gateway:image_load` loads the image
# into the host docker daemon under the tag below. Not invoked by CI —
# CI builds :image directly (no docker daemon on the runner needed).
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["aegis-core-gateway:dev-local"],
)

# arm64 image — the on-prem / Graviton variant consumed by
# release-onprem-image.yml (GHCR). Identical composition to :image but
# packs the arm64 layer and pins the arm64 distroless base EXPLICITLY.
#
# Why an explicit arm64 base instead of `@distroless_static`:
#   `@distroless_static` is a multi-platform repo that resolves to the
#   target-platform variant via a platform transition. On the single-arch
#   arm64 on-prem runner that resolves correctly, but naming the arm64
#   image directly (`@distroless_static_linux_arm64_v8`, already fetched in
#   MODULE.bazel) removes any ambiguity on a multi-arch runner and makes
#   the arm64 intent self-documenting at the build target. The previous
#   bug was the on-prem workflow building :image (amd64 binary) and
#   publishing it under the arm64 GHCR name — explicitness here is the fix.
oci_image(
    name = "image_arm64",
    base = "@distroless_static_linux_arm64_v8",
    entrypoint = ["/usr/local/bin/gateway"],
    exposed_ports = [
        "8080/tcp",
        "9090/tcp",
    ],
    labels = {
        "org.opencontainers.image.source": "https://github.com/BinHsu/aegis-core",
        "org.opencontainers.image.title": "aegis-core-gateway",
        "org.opencontainers.image.description": "Aegis Gateway — gRPC + gRPC-Web + WebRTC entry point.",
        "org.opencontainers.image.licenses": "Apache-2.0",
    },
    tars = [":gateway_layer_arm64"],
    user = "nonroot",
    visibility = ["//visibility:public"],
)

# Local smoke for the arm64 image (only loads cleanly on an arm64 docker
# daemon — e.g. Apple Silicon). Mirrors :image_load.
oci_load(
    name = "image_arm64_load",
    image = ":image_arm64",
    repo_tags = ["aegis-core-gateway:dev-local-arm64"],
)

# ECR push target — Phase 4a Slice 3.
#
# `repository` is BUILD-time required by rules_oci v2 (the runtime
# `--repository` flag is an OVERRIDE, not a substitute — empty BUILD
# value fails analysis). The hardcoded value is fine: account ID +
# region + repo path are already public via ldz #11 + #75 + the trust
# policy ARN in the consuming workflow file; nothing secret leaks here.
# Runtime override with --repository remains available for ad-hoc
# pushes to alternate registries (preview / personal AWS, etc.).
#
# `remote_tags` is intentionally omitted: tags are git-sha-derived
# (`staging-<git_sha>`), computable only at CI runtime. Pass via
# `--tag staging-<sha>` at `bazel run` time.
#
# rules_oci's oci_push consults the standard docker config
# (~/.docker/config.json) for registry auth, which the consuming
# workflow's `aws-actions/amazon-ecr-login` step populates.
#
# CI invocation (from .github/workflows/release-staging-image.yml):
#   bazel run //packaging/gateway:push_staging -- \
#     --repository ${ECR_REGISTRY}/aegis-core \
#     --tag staging-${GITHUB_SHA}
# `target_compatible_with = linux`: same Slice 4 reasoning as
# packaging/engine/BUILD.bazel — pushing builds shared-state side
# effect; even though gateway is pure-Go and cross-compiles cleanly
# from Mac (`:gateway_linux_amd64` works), the push action itself
# should only fire from CI on Linux runners. Server-side
# defense-in-depth tracked in aegis-aws-landing-zone#83.
#
# `repository` here is rules_oci's BUILD-time-required default — used
# only when `bazel run :push_staging` is invoked WITHOUT a runtime
# `--repository` flag override. CI ALWAYS passes --repository at
# runtime sourced from GitHub Variables (vars.AWS_ACCOUNT_ID +
# vars.AWS_REGION + vars.ECR_REPO_NAME), so the value baked here is
# only the upstream operator's local convenience default. Forker's
# CI overrides via --repository, no BUILD edit needed (per ADR-0027
# §"GH Variables over hardcode").
oci_push(
    name = "push_staging",
    image = ":image",
    repository = "251774439261.dkr.ecr.eu-central-1.amazonaws.com/aegis-core",
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)

# GHCR push for the arm64 on-prem image. Sibling of :push_staging, pushing
# :image_arm64 instead of :image. release-onprem-image.yml ALWAYS passes
# `--repository ghcr.io/binhsu/aegis-core-gateway` + `--tag onprem-<sha>`
# at runtime; the BUILD-time `repository` below is rules_oci's required
# default (analysis fails on an empty value) and is the upstream operator's
# local-convenience GHCR target — never the secret-bearing value. Same
# `target_compatible_with = linux` push-from-CI-only discipline as
# :push_staging.
oci_push(
    name = "push_onprem",
    image = ":image_arm64",
    repository = "ghcr.io/binhsu/aegis-core-gateway",
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)
