package(default_visibility = ["//visibility:public"])

# Seed subcommand lib — split out of the binary so unit tests can
# depend on the pure helpers (ContentHashUuid, DeriveCollectionName)
# without linking the gRPC server stack.
cc_library(
    name = "seed_lib",
    srcs = ["seed.cc"],
    hdrs = ["seed.h"],
    deps = [
        "//engine_cpp/src/inference:ggml_embedder",
        "//engine_cpp/src/models:manifest_loader",
        "//engine_cpp/src/rag:chunker",
        "//engine_cpp/src/vectordb:qdrant_client",
        "@boringssl//:crypto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_binary(
    name = "engine",
    srcs = ["main.cc"],
    deps = [
        ":seed_lib",
        "//engine_cpp/src/grpc:aegis_engine_service",
        "//engine_cpp/src/inference:ggml_embedder",
        "//engine_cpp/src/inference:whisper_engine",
        "//engine_cpp/src/metrics:metrics",
        "//engine_cpp/src/models:manifest_loader",
        "//engine_cpp/src/session:model_budget",
        "//engine_cpp/src/session:session_budget",
        "//engine_cpp/src/vectordb:qdrant_client",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        # Pull exposer — brings in civetweb via transitive deps of
        # prometheus-cpp's pull library. Only needed at the binary
        # scope, not in src/metrics which is the metric-writer API
        # shared across the engine's compilation units.
        "@prometheus-cpp//pull:pull",
    ],
)
