package(default_visibility = ["//engine_cpp:__subpackages__"])

cc_library(
    name = "whisper_engine",
    srcs = ["whisper_engine.cc"],
    hdrs = ["whisper_engine.h"],
    deps = [
        "//engine_cpp/third_party/whisper_cpp:whisper_cpp",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "embedder",
    srcs = ["embedder.cc"],
    hdrs = ["embedder.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)
