package(default_visibility = ["//engine_cpp:__subpackages__"])

cc_library(
    name = "manifest_loader",
    srcs = ["manifest_loader.cc"],
    hdrs = ["manifest_loader.h"],
    deps = [
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@nlohmann_json//:json",
    ],
)
