package(default_visibility = ["//engine_cpp:__subpackages__"])

cc_library(
    name = "model_budget",
    srcs = ["model_budget.cc"],
    hdrs = ["model_budget.h"],
)

cc_library(
    name = "session_budget",
    srcs = ["session_budget.cc"],
    hdrs = ["session_budget.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "session",
    srcs = ["session.cc"],
    hdrs = ["session.h"],
    deps = [
        ":session_budget",
        "//engine_cpp/src/audio:opus_decoder",
        "//engine_cpp/src/inference:embedder",
        "//engine_cpp/src/inference:whisper_engine",
        "//engine_cpp/src/rag:retriever",
        "//engine_cpp/src/vectordb:qdrant_client",
        "//proto/aegis/v1:aegis_cc_grpc",
        "//proto/aegis/v1:aegis_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
