package(default_visibility = ["//visibility:private"])

cc_test(
    name = "whisper_transcribe_test",
    srcs = ["whisper_transcribe_test.cc"],
    size = "medium",
    # Model file isn't committed (75 MB, gitignored). The test uses
    # GTEST_SKIP if the model is absent so CI stays green even without
    # the download step.
    data = [
        "@whisper_cpp//:samples",
    ],
    tags = [
        "exclusive",        # real inference is CPU-heavy; don't parallelize
        "requires-model",   # documentation tag for filtering in CI
    ],
    deps = [
        "//engine_cpp/src/audio:wav_reader",
        "//engine_cpp/src/inference:whisper_engine",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "stream_transcribe_test",
    srcs = ["stream_transcribe_test.cc"],
    size = "medium",
    data = [
        "@whisper_cpp//:samples",
    ],
    tags = [
        "exclusive",
        "requires-model",
    ],
    deps = [
        "//engine_cpp/src/audio:wav_reader",
        "//engine_cpp/src/grpc:aegis_engine_service",
        "//engine_cpp/src/session:session_budget",
        "//proto/aegis/v1:aegis_cc_grpc",
        "//proto/aegis/v1:aegis_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bge_m3_embed_test",
    srcs = ["bge_m3_embed_test.cc"],
    size = "medium",
    # Model file is not committed (~438 MB GGUF, gitignored). The test
    # GTEST_SKIPs if the model is absent so CI stays green without the
    # download step. Run ./tools/scripts/download_models.sh --model
    # bge-m3-q4km locally before invoking.
    tags = [
        "exclusive",       # real inference is CPU-heavy; don't parallelize
        "requires-model",  # documentation tag for filtering in CI
    ],
    deps = [
        "//engine_cpp/src/inference:ggml_embedder",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)
