package(default_visibility = ["//visibility:private"])

cc_test(
    name = "whisper_transcribe_test",
    srcs = ["whisper_transcribe_test.cc"],
    size = "medium",
    # Model file isn't committed (75 MB, gitignored). The test uses
    # GTEST_SKIP if the model is absent so CI stays green even without
    # the download step.
    data = [
        "@whisper_cpp//:samples",
    ],
    tags = [
        "exclusive",        # real inference is CPU-heavy; don't parallelize
        "requires-model",   # documentation tag for filtering in CI
    ],
    deps = [
        "//engine_cpp/src/audio:wav_reader",
        "//engine_cpp/src/inference:whisper_engine",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "stream_transcribe_test",
    srcs = ["stream_transcribe_test.cc"],
    # `large` — `medium` caps at 60 s, but this target now runs three
    # cases each doing a full whisper model load (~2 s) + JFK transcribe
    # (~5 s). Two transcribing cases × ~8 s each + overhead easily
    # exceeds 60 s. Bumped 2026-04-20 when the LiveWindowEmitsMidStream
    # case was added for Incident 14 regression coverage.
    size = "large",
    data = [
        "@whisper_cpp//:samples",
    ],
    tags = [
        "exclusive",
        "requires-model",
    ],
    deps = [
        "//engine_cpp/src/audio:wav_reader",
        "//engine_cpp/src/grpc:aegis_engine_service",
        "//engine_cpp/src/session:session_budget",
        "//proto/aegis/v1:aegis_cc_grpc",
        "//proto/aegis/v1:aegis_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bge_m3_embed_test",
    srcs = ["bge_m3_embed_test.cc"],
    size = "medium",
    # Model file is not committed (~438 MB GGUF, gitignored). The test
    # GTEST_SKIPs if the model is absent so CI stays green without the
    # download step. Run ./tools/scripts/download_models.sh --model
    # bge-m3-q4km locally before invoking.
    tags = [
        "exclusive",       # real inference is CPU-heavy; don't parallelize
        "requires-model",  # documentation tag for filtering in CI
    ],
    deps = [
        "//engine_cpp/src/inference:ggml_embedder",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "qdrant_client_test",
    srcs = ["qdrant_client_test.cc"],
    size = "medium",
    # Gated on QDRANT_URL env. GTEST_SKIPs in CI (no Qdrant server
    # stood up); runs locally via:
    #   QDRANT_URL=localhost:6334 \
    #   ./tools/bazelisk/bazelisk test \
    #     //engine_cpp/tests/integration:qdrant_client_test \
    #     --test_env=QDRANT_URL
    # See docs/runbooks/qdrant-local-setup.md for standing up Qdrant.
    tags = [
        "exclusive",        # tests share a Qdrant instance; don't parallelize
        "requires-qdrant",  # documentation tag for filtering in CI
    ],
    deps = [
        "//engine_cpp/src/vectordb:qdrant_client",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "engine_seed_test",
    srcs = ["engine_seed_test.cc"],
    size = "medium",
    # Requires BOTH the bge-m3 model (AEGIS_MODEL_DIR) and a running
    # Qdrant (QDRANT_URL). GTEST_SKIPs cleanly in either absence. Run:
    #   AEGIS_MODEL_DIR=/path/to/models QDRANT_URL=localhost:6334 \
    #   ./tools/bazelisk/bazelisk test \
    #     //engine_cpp/tests/integration:engine_seed_test \
    #     --test_env=AEGIS_MODEL_DIR --test_env=QDRANT_URL
    tags = [
        "exclusive",
        "requires-model",
        "requires-qdrant",
    ],
    deps = [
        "//engine_cpp/cmd/engine:seed_lib",
        "//engine_cpp/src/vectordb:qdrant_client",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
