package(default_visibility = ["//visibility:private"])

cc_test(
    name = "whisper_engine_test",
    srcs = ["whisper_engine_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/inference:whisper_engine",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "opus_decoder_test",
    srcs = ["opus_decoder_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/audio:opus_decoder",
        "//engine_cpp/third_party/libopus:libopus",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "embedder_test",
    srcs = ["embedder_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/inference:embedder",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "model_budget_test",
    srcs = ["model_budget_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/session:model_budget",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "chunker_test",
    srcs = ["chunker_test.cc"],
    size = "small",
    data = ["//docs/rag:taiwan.md"],
    deps = [
        "//engine_cpp/src/rag:chunker",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "qdrant_client_test",
    srcs = ["qdrant_client_test.cc"],
    size = "small",
    deps = [
        "//engine_cpp/src/vectordb:qdrant_client",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)
